Next release
============

v1.12 (2016-02-19)
==================
- added global property

v1.11 (2016-02-19)
==================
- added update confirmation

v1.10 (2016-02-19)
==================
- added timezone support

v1.9 (2016-02-19)
=================
- added client default settings

v1.8 (2016-02-19)
=================
- added json key sorting

v1.7 (2016-02-19)
=================
- added json schema validation

v1.6 (2016-02-18)
=================
- fixed backup directory